<resources>

    <string name="app_name">Security</string>

    <string name="login_title">User</string>
    <string name="login_passwd_prompt">Password</string>
    <string name="login_passwd_ok">O K</string>
    <string name="login_passwd_cancel">Cancel</string>

    <string name="main_btn_defence">ON/OFF</string>
    <string name="main_btn_ipc">Camera</string>
    <string name="main_btn_zone">Zone</string>
    <string name="main_btn_scene">Scene</string>
    <string name="main_btn_setup">Settings</string>

    <string name="main_text_prompt">Current</string>
    <string name="main_text_withdraw">OFF</string>
    <string name="main_text_out">Out</string>
    <string name="main_text_home">Home</string>
    <string name="main_text_sleep">Sleep</string>

    <string name="main_prompt_title">Prompt</string>
    <string name="main_prompt_defence">Can not setup at defence on!</string>
    <string name="main_prompt_ok">OK</string>

    <string name="defence_btn_home">Home</string>
    <string name="defence_btn_out">Out</string>
    <string name="defence_btn_sleep">Sleep</string>
    <string name="defence_btn_withdraw">OFF</string>

    <string name="scene_text_mode">Scene</string>
    <string name="scene_text_out">Out</string>
    <string name="scene_text_home">Home</string>
    <string name="scene_text_sleep">Sleep</string>
    <string name="scene_text_timeout">Activation Time</string>
    <string-array name="scene_timeout_arrays">
        <item>NONE</item>
        <item>30s</item>
        <item>40s</item>
        <item>60s</item>
        <item>100s</item>
        <item>300s</item>
    </string-array>

    <string name="zone_text_no">NO.</string>
    <string name="zone_text_type">Type</string>
    <string name="zone_text_mode">Mode</string>
    <string name="zone_text_delay">Delay</string>
    <string name="zone_text_sensor">Sensor</string>

    <string-array name="zone_type_arrays">
        <item>Normal</item>
        <item>Emerg.</item>
        <item>24 Hour</item>
    </string-array>
    <string-array name="zone_mode_arrays">
        <item>3C</item>
        <item>NO</item>
        <item>NC</item>
        <item>BELL</item>
    </string-array>
    <string-array name="zone_delay_arrays">
        <item>0s</item>
        <item>5s</item>
        <item>15s</item>
        <item>20s</item>
        <item>25s</item>
        <item>40s</item>
        <item>60s</item>
    </string-array>
    <string-array name="zone_sensor_arrays">
        <item>Smoke</item>
        <item>Gas</item>
        <item>PIR</item>
        <item>Door</item>
        <item>Window</item>
        <item>Panic</item>
        <item>Flood</item>
        <item>Pull Cord</item>
        <item>Bed Mat</item>
    </string-array>

    <string name="setup_btn_passwd">Password</string>
    <string name="setup_passwd_old">Old</string>
    <string name="setup_passwd_new">New</string>
    <string name="setup_passwd_confirm">Confirm</string>

    <string name="alarm_prompt_passwd">Password</string>

    <string name="setup_btn_ok">O K</string>

    <string name="ipc_text_monitor">Monitoring...</string>
    <string name="ipc_text_err">Error occurred!</string>

</resources>