<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/zone_text_no"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/zone_text_type"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/zone_text_mode"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/zone_text_delay"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/zone_text_sensor"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />
</LinearLayout>