<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scene_text_m"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/zone_text_mode"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/scene_text_out"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/scene_text_home"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/scene_text_sleep"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />
</LinearLayout>