<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_dim"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:animateLayoutChanges="true"
            android:background="#801c1c1c"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:src="@mipmap/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_setup"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/btn_save"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_baseline_ok_64" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="24dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="right"
                    android:text="@string/setup_passwd_old"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <EditText
                    android:id="@+id/et_password_old"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_edittext_bg"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/et_password_new"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="24dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="right"
                    android:text="@string/setup_passwd_new"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <EditText
                    android:id="@+id/et_password_new"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_edittext_bg"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/et_password_confirm"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="24dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="right"
                    android:text="@string/setup_passwd_confirm"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_edittext_bg"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>