<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_dim"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:animateLayoutChanges="true"
            android:background="#801c1c1c"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:src="@mipmap/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/main_text_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/main_text_prompt"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/main_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_toRightOf="@+id/main_text_prompt"
                android:text="@string/main_text_withdraw"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="780"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_btn_defence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_security_switch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/main_btn_defence"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_btn_ipc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_apps_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/main_btn_ipc"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_btn_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_security_zone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/main_btn_zone"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_btn_scene"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_security_scene" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/main_btn_scene"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_btn_setup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_security_setup" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/main_btn_setup"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="220"
                android:gravity="center"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/scene_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="visible">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/scene_item_text_m"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zone_text_no"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_0"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_1"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="2"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_2"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="3"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_3"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="4"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_4"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="5"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_5"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="6"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_6"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="7"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_text_7"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="8"
                            android:textColor="#FFFFFF"
                            />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/scene_item_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="迴路狀態"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_m0_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m0_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/scene_security_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="保全設定"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:id="@+id/scene_item_m1_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/scene_item_m1_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:layout_gravity="center" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>